src/test/deca/syntax/invalid/wrong-neq-sign.synt
wrong-neq-sign.deca:2: